# SMART-ECOMMERCE-AI-SYSTEM-WORKFLOW-PUBLIC

./: .gitignore  CLAUDE.md  DEPLOY-INFO.md  HUONG-DAN-CHAY-DU-AN.md  README.md  docker-compose.yml  qa_report.md  render.yaml
.claude/: settings.json  settings.local.json
.claude/commands/: ai-ml-engineer.md  api-contract.md  architect.md  backend-express.md  cheatsheet.md  code-reviewer.md  database-manager.md  devops-ci.md  frontend-nextjs.md  security-guard.md  test-engineer.md
.github/workflows/: deploy-ai.yml  deploy-api.yml  deploy-web.yml  ml-training.yml  pr-gate.yml
apps/ai-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt  training_results.json
apps/ai-service/app/: config.py  dependencies.py  main.py
apps/ai-service/app/api/: features.py  health.py  internal.py  recommend.py
apps/ai-service/app/ml/: evaluate.py  features.py  hybrid.py  train_cbf.py  train_cf.py
apps/ai-service/app/schemas/: features.py  recommend.py
apps/ai-service/app/services/: model_registry.py  mongo_client.py  r2_client.py
apps/ai-service/scripts/: train_pipeline.py
apps/web/: .env.example  Dockerfile  middleware.js  next.config.js  package-lock.json  package.json
backend/: .env.example  CLAUDE.md  Dockerfile  package-lock.json  package.json  seed.js  server.js
backend/config/: db.js
backend/controllers/: admin.controller.js  (+8 more)
docs/: AI_LAYER_ARCHITECTURE.md  API_SPECIFICATIONS.md  ARCHITECTURE.md  DATABASE_DESIGN.md  IMPLEMENTATION_PLAN.md  MODULE_STRUCTURE.md  REQUIREMENTS.md  TECH_STACK.md  UI_UX_FRONTEND_PROPOSAL.md  VIBE_CODING_HANDOFF.md
(+81 files in other folders)
