[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "FastAPI ML Recommendation Service"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "==0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic-settings = "^2.2.1"
lightfm = "==1.17"
scikit-learn = "==1.4.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
pymongo = "^4.6.3"
motor = "^3.4.0"
boto3 = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
